<resources>
    <string name="app_name">DentalClinic</string>
    <string name="title_activity_navigation_drawer">Appointments</string>
    <string name="title_information_fragment">Information</string>
    <string name="title_budgets_fragment">Budgets</string>
    <string name="title_add_appointment_activity">Add Appointment</string>
    <string name="title_activity_confirm_appointment">Confirm Appointment</string>
    <string name="select_appointment">Select an Appointment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="lorem_ipsum">Lorem fistrum fistro officia benemeritaar no te digo trigo por no llamarte Rodrigor ahorarr ullamco diodeno. Laboris ullamco por la gloria de mi madre dolor me cago en tus muelas se calle ustée voluptate ut ese hombree hasta luego Lucas nisi. Hasta luego Lucas ese hombree ad por la gloria de mi madre está la cosa muy malar.</string>
    <string name="filling_description">The dental filling is a dental restorative material used to restore the function, integrity and morphology of missing tooth structure. The structural loss typically results from caries or external trauma.</string>
    <string name="cleaning_description">Teeth cleaning is part of oral hygiene and involves the removal of dental plaque from teeth with the intention of preventing cavities, gingivitis, and periodontal disease. People routinely clean their own teeth by brushing and interdental cleaning, and dental hygienists can remove hardened deposits not removed by routine cleaning. Those with dentures and natural teeth may supplement their cleaning with a denture cleaner.</string>
    <string name="endodontics_description">The endodontic therapy or root canal therapy is a sequence of treatment for the infected pulp of a tooth which results in the elimination of infection and the protection of the decontaminated tooth from future microbial invasion. Root canals, and their associated pulp chamber, are the physical hollows within a tooth that are naturally inhabited by nerve tissue, blood vessels and other cellular entities.</string>
    <string name="login_image_description">Image of a tooth</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="wrong_username_password">Wrong Email or Password</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="internet_problem">There is a problem with your Internet Connection</string>
    <string name="operation_not_completed">Operation couldn\'t be completed</string>
    <string name="action_settings">Settings</string>
    <string name="choose_appointment">Select an appointment:</string>
    <string name="chooseDate_add_appointment">Choose Date</string>
    <string name="chooseTime_add_appointment">Choose Time</string>
    <string name="submit_add_appointment">Submit</string>
    <string name="titleLabel_add_appointment">Kind of Intervention</string>
    <string name="logout_item">Logout</string>
    <string name="pref_category1">Main Screen</string>
    <string name="pref_welcome_message">Welcome message</string>
    <string name="pref_welcome_message_subtitle">Reminds you your pending appointments</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_subtitle">Name used in the welcome message</string>
    <string name="delete_button">Delete</string>
    <string name="notifications_button">Notifications</string>
    <string name="label_comments">Comments</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_text">Are you sure you want to confirm?</string>
    <string name="dialog_delete_text">Are you sure you want to delete this appointment?</string>
    <string name="dialog_delete">Delete</string>
    <string name="notifications_dialog_title">What time?</string>
    <string name="notification_text">You have an appointment in %1$s</string>
    <string name="scheduled_notification_toast">Scheduled notification %1$s before your appointment</string>
    <string name="welcome_message_text">Hi, %1$s. You have %2$d pending %3$s</string>
    <string name="welcome_message_dismiss">Dismiss</string>
    <plurals name="numberOfAppointments">
        <item quantity="one">appointment</item>
        <item quantity="other">appointments</item>
    </plurals>
    <string-array name="time_array">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="interventions_array">
        <item>Filling</item>
        <item>Endodontics</item>
        <item>Cleaning</item>
    </string-array>
</resources>
