<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/titleLabel_add_appointment">

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleLabel_add_appointment"
        android:textAlignment="center"
        android:layout_alignParentStart="true">
    </TextView>

    <Spinner
        android:id="@+id/interventions_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <!-- Status -->

    <!-- Priority -->

    <!-- Time and Date -->

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dp"
        android:layout_above="@+id/date_picker_button" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/time_picker_button" />

    <!-- Buttons -->

    <Button
        android:background="@color/colorPrimaryLight"
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/submit_add_appointment" />

    <Button
        android:background="@color/colorPrimaryLight"
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTime_add_appointment"
        android:layout_alignBaseline="@+id/date_picker_button"
        android:layout_alignBottom="@+id/date_picker_button"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/date"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@color/colorPrimaryLight"
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDate_add_appointment"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_comments"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/interventions_spinner"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/comment_edit_text"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>